# fung_prog

./: LICENSE  Main.hs  README.md  Utils.hs  Views.hs  app.cabal  stack.yaml
SQLModels/: Answer.hs  Group.hs  Question.hs  SQLModel.hs  Student.hs  Task.hs  Teacher.hs  Theme.hs  ThemeSource.hs
app/: Main.hs
db_scripts/: create_db.sql
src/: SQLModel.hs  Utils.hs  Views.hs
src/SQLModels/: Answer.hs  Question.hs  Student.hs  Task.hs  Teacher.hs  Theme.hs  ThemeSource.hs
