name:                Lab1 
version:             0.1.0.0
synopsis:            Informational system for individual work with students
description:         Informational system for individual work with students
homepage:            https://github.com/Vermillio/fung_prog
license:             AllRightsReserved
author:              Anna Khodyreva
maintainer:          morganas.scream@gmail.com
copyright:           Anna Khodyreva (c) 2021
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       SQLModels.SQLModel
                       SQLModels.Student
                       SQLModels.Teacher
                       SQLModels.Group
                       Utils
                       Views

  build-depends:       base >=4.3.1,
                       wai-extra >=3.0.0,
                       wai-middleware-static,
                       scotty,
                       clay,
                       text,
                       blaze-html,
                       blaze-markup,
                       aeson,
                       bytestring,
                       array,
                       containers,
                       configurator,
                       mysql-haskell,
                       io-streams,
                       tuple

  default-language:    Haskell2010

source-repository head
   type: git
   location: https://github.com/Vermillio/fung_prog
